# happy-language-friends

./: README.md  pypi_publish_notes.md  pyproject.toml  run.py
app/: __init__.py  routes.py
app/endpoints/: home.py
happy_rag_friends/: __init__.py  cli.py  config.py  first_time_setup.py  routes.py
happy_rag_friends/backend/: __init__.py  create_advisor.py
happy_rag_friends/src/: db.py  documents.py  llm.py  obj.py
happy_rag_friends/static/: styles.css
happy_rag_friends/static/css/: tooltips.css
happy_rag_friends/static/javascript/: advisor-settings-page.js
happy_rag_friends/templates/: _navigation.html  base.html
happy_rag_friends/templates/pages/: advisor-settings.html  ask-a-question.html
