[tool.poetry]
name = "happy-language-friends"
version = "0.1.0"
description = "LLM confidantes with varied personalities"
authors = ["J-sephB-lt-n <joseph.jazz.bolton@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-cpp-python = "^0.2.82"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
